added reset password endpoints
